<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.ExamMenuFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="me.rei_m.hyakuninisshu.feature.exammenu.ui.ExamMenuViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/height_ad_banner">

            <TextView
                android:id="@+id/text_about_exam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_m"
                android:text="@string/text_exam_about"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintBottom_toTopOf="@id/card_exam_history"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_exam_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_m"
                app:cardBackgroundColor="#f6fff8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_about_exam"
                app:visibleOrInvisible="@{viewModel.hasResult}">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_recent_exam_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/padding_m"
                        android:paddingTop="@dimen/padding_m"
                        android:paddingEnd="@dimen/padding_m"
                        android:text="@string/previous_result_of_exam"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintBottom_toTopOf="@id/text_number_of_correct_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_number_of_correct_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_s"
                        android:paddingStart="@dimen/padding_m"
                        android:paddingEnd="@dimen/padding_m"
                        android:text="@string/number_of_correct"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        app:layout_constraintBottom_toTopOf="@id/text_number_of_correct"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_recent_exam_title" />

                    <TextView
                        android:id="@+id/text_number_of_correct"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/padding_m"
                        android:paddingEnd="@dimen/padding_m"
                        android:text="@{viewModel.score}"
                        android:textAppearance="?attr/textAppearanceBody2"
                        app:layout_constraintBottom_toTopOf="@id/text_average_response_time_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_number_of_correct_title"
                        tools:text="28/100" />

                    <TextView
                        android:id="@+id/text_average_response_time_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_s"
                        android:paddingStart="@dimen/padding_m"
                        android:paddingEnd="@dimen/padding_m"
                        android:text="@string/average_response_time"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        app:layout_constraintBottom_toTopOf="@id/average_response_time"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_number_of_correct" />

                    <TextView
                        android:id="@+id/average_response_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/padding_m"
                        android:paddingEnd="@dimen/padding_m"
                        android:textAppearance="?attr/textAppearanceBody2"
                        app:averageAnswerSec="@{viewModel.averageAnswerSec}"
                        app:layout_constraintBottom_toTopOf="@id/button_show_all_exam_results"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_average_response_time_title"
                        tools:text="2.40秒" />

                    <Button
                        android:id="@+id/button_show_all_exam_results"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_s"
                        android:text="@string/show_all_exam_results"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_start_exam"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_m"
                android:text="@string/start_exam"
                android:textSize="@dimen/text_m"
                app:backgroundTint="@color/colorSecondary"
                app:icon="@drawable/ic_edit_white_24dp"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toTopOf="@id/button_start_training_failed_quiz"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_exam_history" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_start_training_failed_quiz"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:layout_marginEnd="@dimen/margin_m"
                android:paddingLeft="@dimen/padding_m"
                android:paddingRight="@dimen/padding_m"
                android:text="@string/start_training_of_exam"
                app:icon="@drawable/ic_rotate_right_white_24dp"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_start_exam"
                app:visibleOrInvisible="@{viewModel.hasResult}" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
